--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-Flask==3.1.1
-gunicorn==20.1.0
-Flask-Login==0.6.2
-Flask-WTF==1.1.1
+Flask==2.2.2
+requests==2.28.2
+gunicorn==20.1.0  # Optional: for production deployment
